--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,10 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Elm</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.1/semantic.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.js"></script>
-  <script src="sidebar.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
 
