--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,12 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Elm</title>
+  <title>Ihangane Medical App</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
-
-
   <link rel="stylesheet" href="assets/stylesheets/style.css" />
   <script type="text/javascript" src="Main.js"></script>
 
