Revert "Add SUI via bower"
This reverts commit 76ecea2632d99e2aee10a0137b47a766cfaa0b1f.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Elm</title>
-  <link rel="stylesheet" href="bower_components/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
 
