--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,9 +2,17 @@
 <html>
 
 <head>
+
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=800">
+
   <title>Ihangane Medical App</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
   <link rel="stylesheet" href="assets/stylesheets/style.css" />
