--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,6 +10,7 @@
   <title>Ihangane Medical App</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.1/semantic.min.css">
+  <link rel="stylesheet" href="bower_components/dropzone/dist/min/dropzone.min.css"/>
 
   <link rel="stylesheet" href="assets/stylesheets/theme-light.css"/>
   <link rel="stylesheet" href="assets/stylesheets/style.css"/>
@@ -19,6 +20,7 @@
 
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
+  <script src="bower_components/dropzone/dist/min/dropzone.min.js"></script>
   <script type="text/javascript" src="Main.js"></script>
 
   <link rel="shortcut icon" href="">
