--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=800">
 
-  <title>Ihangane Medical App</title>
+  <title>E-Heza System</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.1/semantic.min.css">
   <link rel="stylesheet" href="bower_components/dropzone/dist/min/dropzone.min.css"/>
@@ -22,9 +21,16 @@
   <script src="bower_components/copy-button/bundled.min.js"></script>
   <script src="bower_components/offline/offline.min.js"></script>
   <script src="bower_components/dropzone/dist/min/dropzone.min.js"></script>
+
   <script type="text/javascript" src="Main.js"></script>
 
-  <link rel="shortcut icon" href="">
+  <!-- Generated from the most excellent https://realfavicongenerator.net/ -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="manifest.json">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="no-bg">
