--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
 
   <title>E-Heza System</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.1/semantic.min.css">
+  <link rel="stylesheet" href="bower_components/semantic/dist/semantic.min.css">
   <link rel="stylesheet" href="bower_components/dropzone/dist/min/dropzone.min.css"/>
 
   <link rel="stylesheet" href="assets/stylesheets/style.css"/>
