--- a/client/src/index.html
+++ b/client/src/index.html
@@ -30,6 +30,7 @@
 <body class="no-bg">
 </body>
 
+<script src="bower_components/dexie/dist/dexie.min.js"></script>
 <script src="app.js"></script>
 
 </html>
